--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -5,15 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>Bookings App</title>
-        <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css">
+        
+        {% block stylesheets %}
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css">
+        {% endblock %}
+
 	</head>
 
 	<body>
 		{{ include('_header.html.twig') }}
 		
-        <div class="content"></div>
+        <div class="content">{% block content %}{% endblock %}</div>
         
         {{ include('_footer.html.twig') }}
 	</body>
+	{% block javascripts %}{% endblock %}
 </html>
