Create menu to switch between two routes

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -9,12 +9,14 @@
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
             <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/menu.css">
         {% endblock %}
 
 	</head>
 
 	<body>
 		{{ include('_header.html.twig') }}
+        {{ include('_menu.html.twig')}}
 		
         <div class="content">{% block content %}{% endblock %}</div>
         
