--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -10,6 +10,8 @@
             <link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css">
             <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css">
             <link rel="stylesheet" type="text/css" media="screen" href="/css/menu.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/header.css">
+            <link rel="stylesheet" type="text/css" media="screen" href="/css/footer.css">
         {% endblock %}
 
 	</head>
